# ROOT

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  Doxyfile  README.md  input.csv  output.csv  result.plt  test.csv
.github/workflows/: build-and-deploy-docs.yml  build-and-install.yml  build-checks.yml  unit-tests.yml
ROOT/: CMakeLists.txt
ROOT/ROOT/: CMakeLists.txt  config.hpp  function_parser.cpp  function_parser.hpp  main.cpp  reader.cpp  reader.hpp  solver.cpp  solver.hpp  solver_impl.hpp  stepper.cpp  stepper.hpp  stepper_impl.hpp  writer.cpp  writer.hpp  writer_def.hpp  writer_impl.hpp
ROOT/tests/: CMakeLists.txt  reader_tester.hpp  test_reader.cpp
ROOT/tests/integration/: CMakeLists.txt  test_cli.cpp
ROOT/tests/test_data/: config.csv
ROOT/tests/unit/: CMakeLists.txt  function_parser_base_tester.hpp  polynomial_parser_tester.hpp  reader_base_tester.hpp  reader_csv_tester.hpp  test_function_parser.cpp  test_polynomial_parser.cpp  test_reader.cpp  test_trigonometric_parser.cpp  test_writer.cpp  test_writer_base.cpp  trigonometric_parser_tester.hpp  writer_base_tester.hpp
docs/: Doxyfile  conf.py
libROOT/: CMakeLists.txt
libROOT/libROOT/: CMakeLists.txt  dummy_class.cpp  dummy_class.hpp  method.hpp  root.cpp  solver.hpp  solver_def.hpp  solver_impl.hpp  stepper.hpp  stepper_def.hpp  stepper_impl.hpp  writer.hpp  writer_impl.hpp
libROOT/tests/: CMakeLists.txt  test_lib_root.cpp  test_solver.cpp
libROOT/tests/unit/: CMakeLists.txt  solver_tester.hpp  test_solver.cpp
