if(BUILD_TESTING)
    add_executable(test_root test_reader.cpp)
    target_include_directories(test_root PRIVATE ${CMAKE_SOURCE_DIR}/libROOT ${CMAKE_SOURCE_DIR}/ROOT)
    target_link_libraries(test_root PRIVATE GTest::gtest_main CLI11::CLI11)
    include(GoogleTest)
    gtest_discover_tests(test_root)
endif()
